--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.5"   # Ограничение использования CPU
-          memory: 512M  # Ограничение памяти
+          cpus: "0.5"
+          memory: 512M
 
   domainservice:
     build:
@@ -152,8 +152,8 @@ services:
     image: rabbitmq:3-management
     container_name: rabbitmq
     ports:
-      - "5672:5672"     # AMQP
-      - "15672:15672"   # Management UI
+      - "5672:5672"
+      - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
